# bevy-jam-2

./: .gitignore  Cargo.toml  game-58290a0c74a56888.js  index.html
assets/gltf/: test_level.gltf  test_level.json
assets/prototypes/: ambient_light.yaml  camera.yaml  crate.yaml  dynamic.yaml  point_light.yaml  static.yaml  sun copy.yaml  sun.yaml
src/: camera.rs  lib.rs  loading.rs  main.rs  prototypes.rs  utils.rs  world.rs
src/custom_plugins/: discovery.rs  json_gltf.rs  levels.rs  mod.rs  phsyics.rs  prototypes.rs
src/systems/: mod.rs  proto_ambient_light.rs  proto_light.rs  proto_sun.rs  starting_transform.rs
