[package]
name = "game" 
version = "0.1.0"
publish = false
authors = ["David Ayeke <git@ayeke.dev>"] 
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_gltf", "bevy_scene", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }
bevy-inspector-egui = "0.12.1"
bevy-debug-text-overlay = "3.0"
autodefault = "2.0.0"
bevy_prototype_debug_lines = "0.8.1"
bevy_common_assets = "0.3.0"
bevy_flycam = "0.8"
bevy_proto = "0.5.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
